dashboard/ingress_v2.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  routes:
  - match: Host(`dashboard.od.com`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 443
